Update: improved UI and bug fixes

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,14 @@
 {
   "manifest_version": 3,
-  "name": "T&C Summarizer",
+  "name": "Text Summarizer",
   "version": "1.0",
-  "description": "Summarize Terms and Conditions",
+  "description": "Summarize Text like Terms and Conditions",
+  "icons": {
+    "16": "images/icon16.png",
+    "32": "images/icon32.png",
+    "48": "images/icon48.png",
+    "128": "images/icon128.png"
+  },
   "action": {
     "default_popup": "index.html"
   },
