--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,7 +12,7 @@
   "action": {
     "default_popup": "index.html"
   },
-  "permissions": ["activeTab", "scripting"],
+  "permissions": ["activeTab"],
   "host_permissions": ["<all_urls>"],
   "content_scripts": [
     {
